# poetry-artifact-registry-demo

./: README.md
my-dumb-app/: README.md  pyproject.toml
my-dumb-app/my_dumb_app/: __init__.py
my-dumb-library/: README.md  poetry.toml  pyproject.toml
my-dumb-library/my_dumb_library/: __init__.py
